--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,3 +23,11 @@
  <%= f.label :title %><br/>
  <%= f.text_field :title %>
 </div>
+<div class="field">
+ <%= f.label :opinion %></br>
+ <%= f.text_area :opinion %>
+</div>
+<div>
+ <%= f.submit 'Create Book' %>
+</div>
+<% end %>
