--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
 </div>
 <div class="field">
  <%= f.label :opinion %></br>
- <%= f.text_area :opinion %>
+ <%= f.text_area :body %>
 </div>
 <div>
  <%= f.submit 'Create Book' %>
