--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,8 +15,9 @@
 
 </div>
 </body>
+<% end %>
 
-<h1>New book</h1>
+<h2>New book</h2>
 <%= form_with model: @user, local:true do |f| %>
 
 </div>
@@ -31,3 +32,13 @@
  <%= f.submit 'Create Book' %>
 </div>
 <% end %>
+
+<h2>Users</h2>
+<table>
+ <thead>
+  <tr>
+   <th>image</th>
+   <th>name</th>
+  </tr>
+ </thead>
+</table>
