--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<% @users.each do |user| %>
-
 <body>
  <div>
      <h2>User info</h2>
@@ -12,11 +10,10 @@
       </tr>
   </tbody>
 
-
 </div>
 </body>
 
-<h1>New book</h1>
+<h2>New book</h2>
 <%= form_with model: @user, local:true do |f| %>
 
 <div class="field">
@@ -31,3 +28,15 @@
  <%= f.submit 'Create Book' %>
 </div>
 <% end %>
+
+
+<h2>Books</h2>
+<table>
+ <thead>
+  <tr>
+   <th>Title</th>
+   <th>Opinion</th>
+  </tr>
+ </thead>
+</table>
+
