--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,11 +6,14 @@
   <tbody>
       <tr>
        <th>name</th>
+        <%= current_user.name %>
       </tr>
       <tr>
        <th>introduction</th>
       </tr>
+      <%= link_to "edit", edit_users_path %>
   </tbody>
+
 
 
 </div>
@@ -22,10 +25,10 @@
 
 </div>
 <div class="field">
- <%= f.label :title %><br/>
+ <%= f.label :title %><br />
  <%= f.text_field :title %>
 <div class="field">
- <%= f.label :opinion %></br>
+ <%= f.label :opinion %><br />
  <%= f.text_area :body %>
 </div>
 <div>
