--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,10 +4,12 @@
   <tbody>
       <tr>
        <th>name</th>
+       <%= current_user.name %>
       </tr>
       <tr>
        <th>introduction</th>
       </tr>
+       <%= link_to "edit", edit_users_path %>
   </tbody>
 
 </div>
@@ -17,11 +19,11 @@
 <%= form_with model: @user, local:true do |f| %>
 
 <div class="field">
- <%= f.label :title %><br/>
+ <%= f.label :title %><br />
  <%= f.text_field :title %>
 </div>
 <div class="field">
- <%= f.label :opinion %></br>
+ <%= f.label :opinion %><br />
  <%= f.text_area :body %>
 </div>
 <div>
