--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,7 @@
 <div class="field">
   <%= f.label :name %><br />
   <%= f.text_field :name %>
+  <%= current_user.name %>
 </div>
 
 <div class="field">
