--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,10 @@
       <tr>
        <th>introduction</th>
       </tr>
-       <%= link_to "edit", edit_users_path %>
+      <tr>
+       <th><%= link_to "edit", edit_user_path(user.id) %>
+       <span class="fas fa-user-cog"></span></th>
+       </tr>
   </tbody>
 
 </div>
