--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,5 @@
  *= require_tree .
  *= require_self
  */
-@import 'font-awesome-sprockers';
+@import 'font-awesome-sprockets';
 @import 'font-awesome';
