--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,18 @@
-<h1>トップページ</h1>
+<h1>welcome to
+<i class="fas fa-book"></i>
+<strong>Bookers</strong>!!
+</h1>
+
+<p>In
+<i class="fas fa-book"></i>
+<strong>Bookers</strong>,
+</p>
+
+<p>you can share and exchange your opinions , inpressions , and emotions</p>
+<p> about various books!</p>
+
+
+
+<footer>
+  <p>CopyRight Infratop.inc</p>
+</footer>
