--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
         <span class="fas fa-home"></span>
         <%= link_to "Home", root_path %>
          <span class="fas fa-users"></span>
-        <%= link_to "Users", '/users/index' %>
+        <%= link_to "Users", users_path %>
         <span class="fas fa-book-open"></span>
-        <%= link_to "Books", 'books/index' %>
+        <%= link_to "Books", books_path %>
         <span class="fas fa-sign-out-alt"></span>
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
 
