--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,9 @@
 
     <% else %>
         <span class="fas fa-home"></span>
-        <%= link_to "Home", new_user_registration_path %>
+        <%= link_to "Home", root_path %>
         <span class="fas fa-link"></span>
-        <%= link_to "About", new_user_registration_path %>
+        <%= link_to "About", homes_about_path %>
         <span class="fas fa-user-plus"></span>
         <%= link_to "Sign up", new_user_registration_path %>
          <span class="fas fa-sign-in-alt"></span>
