--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -11,6 +11,8 @@
 <p>you can share and exchange your opinions , inpressions , and emotions</p>
 <p> about various books!</p>
 
+<p><%= link_to "Log in", new_user_session_path %></p>
+<p><%= link_to "Sign up", new_user_registration_path %></p>
 
 
 <footer>
