--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <% if user_signed_in? %>
         <span class="fas fa-home"></span>
-        <%= link_to "Home", root_path %>
+        <%= link_to "Home", user_path(current_user.id) %>
          <span class="fas fa-users"></span>
         <%= link_to "Users", users_path %>
         <span class="fas fa-book-open"></span>
