--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,14 +1,10 @@
 <h2>User info</h2>
-<div class="field">
-  <%= f.label :name %><br />
-  <%= f.text_field :name %>
-  <%= current_user.name %>
-</div>
+<label for="inputName">Name</label>
+ <%= f.text_field :name %>
+ <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback:"no_image.jpeg" %>
+ <label for="inputImage">Image</label>
+ <%=f.attachment_field :profile_image, placeholder:"プロフィール画像" %>
 
-<div class="field">
-  <%= f.label :image %>
-  <%= file_field_tag "upload" %><p>選択されていません</p>
-</div>
 <div class="field">
     <%= f.label :introduction %><br />
     <%= f.text_field :introduction %>
