--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,14 +1,22 @@
 <h2>User info</h2>
-<label for="inputName">Name</label>
- <%= f.text_field :name %>
- <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback:"no_image.jpeg" %>
- <label for="inputImage">Image</label>
- <%=f.attachment_field :profile_image, placeholder:"プロフィール画像" %>
+<%= form_with model: @user, local:true do |f| %>
+
+<div class="field">
+   <%= f.label :name %><br />
+   <%= f.text_field :name  %>
+</div>
+
+<div class="field">
+    <%= f.label :image %><br />
+    <%= file_field_tag "upload" %>
+
+</div>
 
 <div class="field">
     <%= f.label :introduction %><br />
-    <%= f.text_field :introduction %>
+    <%= f.text_area :body %>
 </div>
 <div>
   <%= f.submit 'Update User' %>
 </div>
+<% end %>
