--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,3 @@
-<% @user.each do |users| %>
-
 <body>
  <div>
      <h2>User info</h2>
@@ -17,12 +15,8 @@
        </th>
        </tr>
   </tbody>
-
-
-
 </div>
 </body>
-<% end %>
 
 <h2>New book</h2>
 <%= form_with model: @users, local:true do |f| %>
@@ -41,11 +35,9 @@
 <% end %>
 
 <h2>Users</h2>
-<table>
- <thead>
+ <tbody>
   <tr>
    <th>image</th>
    <th>name</th>
   </tr>
- </thead>
-</table>
+ </tbody>
