--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
 
 <div class="field">
     <%= f.label :introduction %><br />
-    <%= f.text_area :body %>
+    <%= f.text_area :introduction %>
 </div>
 <div>
   <%= f.submit 'Update User' %>
