--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,8 @@
        <%= current_user.name %>
       </tr>
       <tr>
-       <p>introduction</p>
+       <th>introduction</th>
+       <%= current_user.introduction %>
       </tr>
       <tr>
        <th><%= link_to edit_user_path(current_user.id), method: :get do %>
@@ -30,7 +31,7 @@
 </div>
 <div class="field">
  <%= f.label :opinion %><br />
- <%= f.text_area :body %>
+ <%= f.text_area :opinion%>
 </div>
 <div>
  <%= f.submit 'Create Book' %>
