--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,7 @@
 
 <div class="field">
     <%= f.label :image %><br />
-    <%= file_field_tag "upload" %>
+    <%= f.attachment_field :profile_image %>
 </div>
 
 <div class="field">
