--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
  <div>
  <h2>User info</h2>
   <tbody>
-     <p><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', fallback:"no_image.jpg" %></p>
+     <p><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %></p>
       <tr>
        <th>name</th>
        <%= current_user.name %>
