--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,7 +9,7 @@
   </thead>
   <tbody>
   <div class="list-wrap">
-    <% @book.each do |book| %>
+    <% @books.each do |book| %>
     <div class="list-comment">
       <tr>
         <td class="list-title"><%= book.title %></td>
