--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
      <% if current_user.profile_image == nil %>
      <p><%= image_tag 'no_image.jpeg' %></p>
      <% else %>
-     <p><%= attachment_image_tag current_user, :image,size: '60x60' %></p>
+     <p><%= attachment_image_tag current_user, :profile_image,size: '60x60' %></p>
      <% end %>
       <tr>
        <th>name</th>
