--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
 </body>
 
 <h2>New book</h2>
-<%= form_with model: @users, local:true do |f| %>
+<%= form_with model: @book, local:true do |f| %>
 
 </div>
 <div class="field">
