--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,7 +7,7 @@
 </div>
 <div class="field">
   <%= f.label :opinion %>
-  <%= f.text_field :opinion %>
+  <%= f.text_field :body %>
 </div>
 <div>
   <%= f.submit 'Update Book' %>
