--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,28 @@
 <h2>Book detail</h2>
-<%= @book.title %>
 
-<table>
-  <tr>
-    <td>
-      <%= link_to 'edit', edit_book_path(book) %>
+<body>
+  <p>
+    <strong>Title</strong>
+    <td class="list-title"><%= @book.title %></td>
+  </p>
+  <p>
+    <strong>Opinion</strong>
+    <td class="list-body"><%= @book.body %></td>
+  </p>
+  </body>
+
+  <tbody>
+    <div class="list-wrap">
+    <div class="list-comment">
+    </div>
+  </div>
+  </tbody>
+
+  <table>
+    <td><%= link_to 'edit', edit_book_path(@books) %>
     </td>
     <td>
-      <%= link_to 'destroy', book, method: :delete, data: {confilm: "本当に削除しますか?" } %>
+      <%= link_to 'destroy', @book, method: :delete, data: {confilm: "本当に削除しますか?" } %>
     </td>
   </tr>
 </table>
