--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,15 +27,15 @@
 </body>
 
 <h2>New book</h2>
-<%= form_with model: @user, local:true do |f| %>
+<%= form_with model: @book, local:true do |f| %>
 
 <div class="field">
  <%= f.label :title %><br />
  <%= f.text_field :title %>
 </div>
 <div class="field">
- <%= f.label :opinion %><br />
- <%= f.text_area :opinion%>
+ <%= f.label :body %><br />
+ <%= f.text_area :body %>
 </div>
 <div>
  <%= f.submit 'Create Book' %>
