--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,7 +13,7 @@
     <div class="list-comment">
       <tr>
         <td class="list-title"><%= book.title %></td>
-        <td class="list-opinion"><%= book.opinion %></td>
+        <td class="list-opinion"><%= book.body %></td>
       </tr>
     </div>
   </div>
