--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,40 +1,4 @@
-<body>
- <div>
-     <h2>User info</h2>
-  <tbody>
-      <tr>
-       <th>name</th>
-       <th><%= current_user.name %></th>
-      </tr>
-      <tr>
-       <th>introduction</th>
-       <th><%= current_user.introduction %></th>
-      </tr>
-       <th><%= link_to edit_user_path(current_user.id), method: :get do %>
-       <i class="fas fa-user-cog"></i>
-       <% end %>
-       </th>
-       </tr>
-  </tbody>
-</div>
-</body>
-
-<h2>New book</h2>
-<%= form_with model: @book, local:true do |f| %>
-
-</div>
-<div class="field">
- <%= f.label :title %><br />
- <%= f.text_field :title %>
-<div class="field">
- <%= f.label :opinion %><br />
- <%= f.text_area :body %>
-</div>
-<div>
- <%= f.submit 'Create Book' %>
-</div>
-<% end %>
-
+<%= render 'layouts/sidelist' %>
 <h2>Users</h2>
  <tbody>
   <tr>
