--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,48 +1,4 @@
-<body>
- <div>
- <h2>User info</h2>
-  <tbody>
-     <% if current_user.profile_image == nil %>
-     <p><%= image_tag 'no_image.jpeg' %></p>
-     <% else %>
-     <p><%= attachment_image_tag current_user, :profile_image,size: '60x60' %></p>
-     <% end %>
-      <tr>
-       <th>name</th>
-       <%= current_user.name %>
-      </tr>
-      <tr>
-       <th>introduction</th>
-       <%= current_user.introduction %>
-      </tr>
-      <tr>
-       <th><%= link_to edit_user_path(current_user.id), method: :get do %>
-       <i class="fas fa-user-cog"></i>
-       <% end %>
-       </th>
-       </tr>
-  </tbody>
-
-</div>
-</body>
-
-<h2>New book</h2>
-<%= form_with model: @books, local:true do |f| %>
-
-<div class="field">
- <%= f.label :title %><br />
- <%= f.text_field :title %>
-</div>
-<div class="field">
- <%= f.label :opinion %><br />
- <%= f.text_area :body %>
-</div>
-<div>
- <%= f.submit 'Create Book' %>
-</div>
-<% end %>
-
-
+<%= render 'layouts/sidelist' %>
 <h2>Books</h2>
 <table>
  <thead>
@@ -53,7 +9,7 @@
  </thead>
 </table>
 <div class="list-wrap">
-    <% @book.each do |book| %>
+    <% @books.each do |book| %>
     <div class="list-comment">
       <tr>
         <td class="list-title"><%= book.title %></td>
