--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,7 +20,7 @@
   </tbody>
 
   <table>
-    <td><%= link_to 'edit', edit_book_path(@books) %>
+    <td><%= link_to 'edit', edit_book_path(@book) %>
     </td>
     <td>
       <%= link_to 'destroy', @book, method: :delete, data: {confilm: "本当に削除しますか?" } %>
