--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -25,7 +25,7 @@
 </body>
 
 <h2>New book</h2>
-<%= form_with model: @book, local:true do |f| %>
+<%= form_with model: @book, url:'/books', local:true do |f| %>
 
 <div class="field">
  <%= f.label :title %><br />
