--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -5,24 +5,25 @@
      <% else %>
      <p><%= attachment_image_tag current_user, :profile_image,size: '60x60' %></p>
      <% end %>
+     <table>
+      <tbody>
       <tr>
        <th>name</th>
-       <%= current_user.name %>
+       <th><%= current_user.name %></th>
       </tr>
       <tr>
        <th>introduction</th>
-       <%= current_user.introduction %>
+       <th><%= current_user.introduction %></th>
       </tr>
+      </tbody>
+      </table>
       <tr>
+       <div class="row">
        <th><%= link_to edit_user_path(current_user.id), method: :get do %>
+       </div>
        <i class="fas fa-user-cog"></i>
        <% end %>
        </th>
-       </tr>
-  </tbody>
-
-</div>
-</body>
 
 <h2>New book</h2>
 <%= form_with model: @book, url:'/books', local:true do |f| %>
