--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,19 @@
 <%= render 'layouts/sidelist' %>
 <h2>Users</h2>
+<table>
  <tbody>
   <tr>
-   <th>image</th>
-   <th>name</th>
+   <td>image</td>
+   <td>name</td>
+  </tr>
+  <tr>
+   <td><% link_to user_path(book.user.id) do %>
+        <%= attachment_image_tag book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
+   </td>
+       <% end %>
+   <td>
+      <%= current_user.name %>
+   </td>
   </tr>
  </tbody>
+ </table>
