--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,26 @@
-<%= render 'layouts/sidelist' %>
+<%= render 'layouts/sidelist', book:@book_new %>
 <h2>Users</h2>
 <table>
- <tbody>
+ <thead>
   <tr>
    <td>image</td>
    <td>name</td>
   </tr>
+  </thead>
+  <tbody>
+   <% @users.each do |user| %>
   <tr>
-   <td><% link_to user_path(book.user.id) do %>
-        <%= attachment_image_tag book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
+   <td><%= link_to user_path(user.id) do %>
+        <%= attachment_image_tag user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
    </td>
        <% end %>
    <td>
-      <%= current_user.name %>
+      <%= user.name %>
    </td>
+   <td>
+    <%= link_to "show", user %>
+   </td>
+   <% end %>
   </tr>
  </tbody>
  </table>
