--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 <tbody>
     <% @book_data.each do |book| %>
       <tr>
-        <td>% li<nk_to user_path(book.user.id) do %>
+        <td><%= link_to user_path(book.user.id) do %>
         <%= attachment_image_tag book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
         </td>
         <% end %>
