--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,15 +9,15 @@
     </tr>
   </thead>
   <tbody>
-  <div class="list-wrap">
     <% @books.each do |book| %>
-    <div class="list-comment">
       <tr>
-        <td class="list-title"><%= book.title %></td>
-        <td class="list-opinion"><%= book.body %></td>
+        <td><%= link_to user_path(book.user.id) do %>
+          <%= attachment_image_tag book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
+        </td>
+            <% end %>
+        <td><%= link_to book_path(book.id), class: "book_" + "#{book.id}" do %><%= book.title %><% end %></td>
+        <td><%= book.body %></td>
       </tr>
-    </div>
-  </div>
+      <% end %>
   </tbody>
 </table>
-<% end %>
