--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,7 +1,7 @@
-<% if model.errors.any? %>
- <div class="alert alert-warning">
+<% if object.errors.any? %>
+ <div>
    <ul>
-     <% model.errors.full_messages.each do |message| %>
+     <% object.errors.full_messages.each do |message| %>
      <li><%= message %></li>
      <% end %>
    </ul>
