--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -26,7 +26,8 @@
        </th>
 
 <h2>New book</h2>
-<%= form_with model: @book, url:'/books', local:true do |f| %>
+<%= form_with model: book, url:'/books', local:true do |f| %>
+<%= render 'layouts/error_messages', object: f.object %>
 
 <div class="field">
  <%= f.label :title %><br />
