--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,26 +10,40 @@
   </head>
 
   <body>
+    <header class="shadow-sm">
+    <nav class="navbar navber-expand-lg navber-light">
+    <div class="container">
+        <%= link_to "bookers" %>
+    <button class="navber-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navberNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navber-toggler-icon"></span>
+    </button>
+    <div class="collapse navber-collapse" id="navberNavDropdown">
+      <ul class="navber-nav ml-auto">
     <% if user_signed_in? %>
-        <span class="fas fa-home"></span>
-        <%= link_to "Home", user_path(current_user.id) %>
-         <span class="fas fa-users"></span>
-        <%= link_to "Users", users_path %>
-        <span class="fas fa-book-open"></span>
-        <%= link_to "Books", books_path %>
-        <span class="fas fa-sign-out-alt"></span>
-        <%= link_to "logout", destroy_user_session_path, method: :delete %>
+        <span class="fas fa-home">
+        <%= link_to "Home", user_path(current_user.id) %></span>
+         <span class="fas fa-users">
+        <%= link_to "Users", users_path %></span>
+        <span class="fas fa-book-open">
+        <%= link_to "Books", books_path %></span>
+        <span class="fas fa-sign-out-alt">
+        <%= link_to "logout", destroy_user_session_path, method: :delete %></span>
 
     <% else %>
-        <span class="fas fa-home"></span>
-        <%= link_to "Home", root_path %>
-        <span class="fas fa-link"></span>
-        <%= link_to "About", homes_about_path %>
-        <span class="fas fa-user-plus"></span>
-        <%= link_to "Sign up", new_user_registration_path %>
-         <span class="fas fa-sign-in-alt"></span>
-        <%= link_to "Log in", new_user_session_path %>
+        <span class="fas fa-home">
+        <%= link_to "Home", root_path %></span>
+        <span class="fas fa-link">
+        <%= link_to "About", homes_about_path %></span>
+        <span class="fas fa-user-plus">
+        <%= link_to "Sign up", new_user_registration_path %></span>
+         <span class="fas fa-sign-in-alt">
+        <%= link_to "Log in", new_user_session_path %></span>
     <% end %>
+    </ul>
+    </div>
+    </div>
+    </nav>
+    </header>
     <% flash.each do |message_type, message| %>
     <%= content_tag :div, message, class: message_type %>
     <% end %>
