--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,30 +4,38 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">
     <header class="shadow-sm">
-    <nav class="navbar navber-expand-lg navber-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-        <%= link_to "bookers" %>
-    <button class="navber-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navberNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navber-toggler-icon"></span>
+      <a class="navbar-brand p-3" href="/">
+        <%= link_to "bookers" %></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navber-collapse" id="navberNavDropdown">
-      <ul class="navber-nav ml-auto">
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ml-auto">
+
     <% if user_signed_in? %>
-        <span class="fas fa-home">
+        <li>
+          <span class="fas fa-home">
         <%= link_to "Home", user_path(current_user.id) %></span>
-         <span class="fas fa-users">
+        </li>
+         <li><span class="fas fa-users">
         <%= link_to "Users", users_path %></span>
-        <span class="fas fa-book-open">
+        </li>
+        <li><span class="fas fa-book-open">
         <%= link_to "Books", books_path %></span>
-        <span class="fas fa-sign-out-alt">
+        </li>
+        <li><span class="fas fa-sign-out-alt">
         <%= link_to "logout", destroy_user_session_path, method: :delete %></span>
+        </li>
 
     <% else %>
         <span class="fas fa-home">
