--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,13 @@
 
 <%= render 'layouts/sidelist', book:@book_new %>
 <h2>Books</h2>
-<table>
+<table class="table table-hover">
  <thead>
   <tr>
     <th></th>
     <th>Title</th>
     <th>Opinion</th>
+    <th colspan="3"></th>
   </tr>
  </thead>
 
