--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,12 @@
 <%= render 'layouts/sidelist', book:@book_new %>
 <h2>Books</h2>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
     <th>Title</th>
     <th>Opinion</th>
+    <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
