--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -5,7 +5,7 @@
      <% else %>
      <p><%= attachment_image_tag current_user, :profile_image,size: '60x60' %></p>
      <% end %>
-     <table>
+     <table class="table">
       <tbody>
       <tr>
        <th>name</th>
