--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,11 @@
 <%= render 'layouts/sidelist', book:@book_new %>
 <h2>Users</h2>
-<table>
+<table class="table table-hover">
  <thead>
   <tr>
-   <td>image</td>
-   <td>name</td>
+   <th>image</th>
+   <th>name</th>
+   <th colspan="3"></th>
   </tr>
   </thead>
   <tbody>
