--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,4 @@
+<div class="mx-auto">
 <h1>welcome to
 <i class="fas fa-book"></i>
 <strong>Bookers</strong>!!
@@ -11,7 +12,7 @@
 <p>you can share and exchange your opinions , inpressions , and emotions</p>
 <p> about various books!</p>
 
-<p><%= link_to "Log in", new_user_session_path %></p>
-<p><%= link_to "Sign up", new_user_registration_path %></p>
-
+<p><%= link_to "Log in", new_user_session_path, class: "btn btn-info text-light btn-sm btn-block" %></p>
+<p><%= link_to "Sign up", new_user_registration_path, class: "btn btn-success text-light btn-sm btn-block" %></p>
+</div>
 
