--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<div class="row">
+<div class="col-md-8 offset-md-1">
 <%= render 'layouts/sidelist', book:@book_new %>
 <h2>Users</h2>
 <table class="table table-hover">
