--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 
+<div class="container">
 <%= render 'layouts/sidelist', book:@book_new %>
+
+<div class="row">
+<div class="col-md-8 offset-md-1">
 <h2>Books</h2>
 <table class="table table-hover">
  <thead>
@@ -22,5 +26,8 @@
         <td><%= book.body %></td>
       </tr>
       <% end %>
+      </div>
+      </div>
+      </div>
   </tbody>
 </table>
