--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
 <%= render 'layouts/sidelist', book:@book_new %>
+<div class="col-md-8 offset-md-1">
 <h2>Books</h2>
 
 <table class="table table-hover">
