--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,13 @@
 
 <%= render 'layouts/sidelist', book:@book_new %>
+<div class="col-md-8 offset-md-1">
 <h2>Book detail</h2>
 <table class="table table-hover">
 <tbody>
   <tr>
-   <td><%= attachment_image_tag @book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %></td>
+   <td><%= link_to user_path(@book.user.id) do %>
+       <%= attachment_image_tag @book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %></td>
+       <% end %>
    <td><%= link_to book_path(@book), class: "book_" + "#{@book.id}" do %><%= @book.title %><% end %></td>
    <td><%= @book.body %></td>
    <td><%= link_to 'edit', edit_book_path(@book), class: "btn btn-success text-light" %></td>
