--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,22 +1,23 @@
+<div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 <h2>User info</h2>
 <%= form_with model: @user, local:true do |f| %>
-<%= render 'layouts/error_messages', model: f.object %>
 
 <div class="field">
-   <%= f.label :name %><br />
-   <%= f.text_field :name  %>
+   <%= f.label :name %>
+   <p><%= f.text_field :name %></p>
 </div>
 
 <div class="field">
-    <%= f.label :image %><br />
+    <%= f.label :image %>
     <%= f.attachment_field :profile_image %>
 </div>
 
 <div class="field">
-    <%= f.label :introduction %><br />
-    <%= f.text_area :introduction %>
+    <%= f.label :introduction %>
+    <p><%= f.text_area :introduction %></p>
 </div>
 <div>
-  <%= f.submit 'Update User' %>
+  <%= f.submit 'Update User', class: "btn btn-secondary text-light" %>
+</div>
 </div>
 <% end %>
