--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<div class="row">
-<div class="col-md-8 offset-md-1">
+
 <%= render 'layouts/sidelist', book:@book_new %>
+<div class="col-md-8 offset-md-1">
 <h2>Users</h2>
 <table class="table table-hover">
  <thead>
@@ -25,5 +25,6 @@
    </td>
    <% end %>
   </tr>
+  </div>
  </tbody>
  </table>
