--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,9 +2,10 @@
 <div class="col-md-8 offset-md-1">
 <h2>Books</h2>
 
-<table class="table table-hover">
+<table class="table table-hover able-inverse">
   <thead>
     <tr>
+      <th></th>
     <th>Title</th>
     <th>Opinion</th>
     <th colspan="3"></th>
