--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,7 +6,9 @@
 <tbody>
   <tr>
    <td><%= link_to user_path(@book.user.id) do %>
-       <%= attachment_image_tag @book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %></td>
+       <%= attachment_image_tag @book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
+        <%= @book.user.name %>
+       </td>
        <% end %>
    <td><%= link_to book_path(@book), class: "book_" + "#{@book.id}" do %><%= @book.title %><% end %></td>
    <td><%= @book.body %></td>
