--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,9 +15,13 @@
     <% @books.each do |book| %>
       <tr>
         <td><%= link_to user_path(book.user.id) do %>
+        <% if current_user.profile_image == nil %>
+        <%= image_tag 'no_image.jpeg', size: '40x40' %>
+        <% else %>
           <%= attachment_image_tag book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
         </td>
             <% end %>
+        <% end %>
         <td><%= link_to book_path(book.id), class: "book_" + "#{book.id}" do %><%= book.title %><% end %></td>
         <td><%= book.body %></td>
       </tr>
