--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -10,17 +10,17 @@
       <tbody>
       <tr>
        <th>name</th>
-       <th><%= current_user.name %></th>
+       <th><%= user.name %></th>
       </tr>
       <tr>
        <th>introduction</th>
-       <th><%= current_user.introduction %></th>
+       <th><%= user.introduction %></th>
       </tr>
       </tbody>
       </table>
       <tr>
        <div class="row">
-       <th><%= link_to edit_user_path(current_user.id), method: :get do %>
+       <th><%= link_to edit_user_path(user.id), method: :get do %>
        </div>
        <button type="button" class="btn btn-outline-secondary btn-sm btn-block"><i class="fas fa-user-cog"></i></button>
        <% end %>
