--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'layouts/sidelist', book:@book_new %>
+<%= render 'layouts/sidelist', book:@book_new, user:@user %>
 
 <div class="col-md-8 offset-md-1">
 <h2>Books</h2>
