--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,7 +1,7 @@
-<% if object.errors.any? %>
+<% if model.errors.any? %>
  <div>
    <ul>
-     <% object.errors.full_messages.each do |message| %>
+     <% model.errors.full_messages.each do |message| %>
      <li><%= message %></li>
      <% end %>
    </ul>
