--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -16,7 +16,7 @@
 </div>
 <% end %>
 
-<%= link_to "show", book_path(@book) %>
+<%= link_to "Show", book_path(@book) %>
 |
 <%= link_to "Back", books_path %>
 </div>
