--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -1,4 +1,5 @@
 <div class="col-md-3">
+ <%= render 'layouts/error_messages', model:@book_new %>
 <h2>User info</h2>
   <tbody>
      <% if current_user.profile_image == nil %>
