--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,14 +14,18 @@
    <% @users.each do |user| %>
   <tr>
    <td><%= link_to user_path(user.id) do %>
-        <%= attachment_image_tag user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
-   </td>
-       <% end %>
+        <% if current_user.profile_image == nil %>
+        <%= image_tag 'no_image.jpeg', size: '40x40' %>
+        <% else %>
+          <%= attachment_image_tag book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
+        </td>
+            <% end %>
+        <% end %>
    <td>
       <%= user.name %>
    </td>
    <td>
-    <%= link_to "show", user %>
+    <%= link_to "Show", user %>
    </td>
    <% end %>
   </tr>
