--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,13 @@
 <%= render 'layouts/sidelist', book:@book_new, user:current_user %>
 <div class="col-md-8 offset-md-1">
 <h2>Books</h2>
+<% if @book_new.errors %>
+<ul>
+  <% @book_new.errors.full_messages.each do |message| %>
+  <li><%= message %></li>
+  <% end %>
+</ul>
+<% end %>
 
 <table class="table table-hover able-inverse">
   <thead>
