--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,4 +1,5 @@
 <% if model.errors.any? %>
+  <h3><%= model.errors.count %>error</h3>
  <div>
    <ul>
      <% model.errors.full_messages.each do |message| %>
