--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-3">
- <%= render 'layouts/error_messages', model:@book_new %>
+  <%= render 'layouts/error_messages', model:@book_new %>
 <h2>User info</h2>
   <tbody>
      <% if current_user.profile_image == nil %>
@@ -28,8 +28,7 @@
        </th>
 
 <h2>New book</h2>
-<%= form_with model: book, url:'/books', local:true do |f| %>
-
+<%= form_with model: @book_new, url:'/books', local:true do |f| %>
 
 <div class="field">
  <%= f.label :title %><br />
