--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,7 +23,7 @@
       <tr>
         <td><%= link_to user_path(book.user.id) do %>
         <% if current_user.profile_image == nil %>
-        <%= image_tag 'no_image.jpeg', size: '40x40' %>
+        <%= image_tag 'no_image.jpg', size: '40x40' %>
         <% else %>
           <%= attachment_image_tag book.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
         </td>
