--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,5 @@
 
-
-<%= render 'layouts/sidelist', book:@book, user:current_user %>
+<%= render 'layouts/error_messages', model:book %><%= render 'layouts/sidelist', book:@book_new, user:current_user %>
 
 <div class="col-md-8 offset-md-1">
 <h2>Books</h2>
