--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= render 'layouts/error_messages', model:book %><%= render 'layouts/sidelist', book:@book_new, user:current_user %>
+<%= render 'layouts/sidelist', book:@book, user:current_user %>
 
 <div class="col-md-8 offset-md-1">
 <h2>Books</h2>
@@ -27,6 +27,20 @@
         <td><%= link_to book_path(book.id), class: "book_" + "#{book.id}" do %><%= book.title %><% end %></td>
         <td><%= book.body %></td>
       </tr>
+      <% if @book.favorited_by?(current_user) %>
+   <td>
+      <%= link_to book_favorites_path(@book), method: :delete do %>
+     ♥<%= @book.favorites.count %>
+     <% end %>
+   </td>
+   <% else %>
+   <td>
+    <%= link_to book_favorites_path(@book), method: :POST do %>
+     ♡<%= @book.favorites.count %>
+     <% end %>
+   </td>
+   <% end %>
       <% end %>
+
   </tbody>
 </table>
