--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,7 +26,9 @@
         <% end %>
         <td><%= link_to book_path(book.id), class: "book_" + "#{book.id}" do %><%= book.title %><% end %></td>
         <td><%= book.body %></td>
-      </tr>
+
+        <td><%= link_to "#{book.book_comments.count} コメント", book_path(book) %></td>
+         </tr>
       <% end %>
 
   </tbody>
