--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,21 +33,21 @@
      <% end %>
    </td>
    <td>
-       コメント件数: <%= @book.book_comment.count %>
+       コメント件数: <%= @book.book_comments.count %>
    </td>
    <% @book.book_comments.each do |book_comment| %>
    <%= book_comment.user.name %>
-   <%= book_comment.created_at.strftime %><%= book_comment_comment %>
+   <%= book_comment.comment %>
    <% end %>
 
-   <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
-   <%= f.text_area :comment, row:'5' %>
-   <%= f.submit "送信" %>
-   <% end %>
 
   </tr>
   </tbody>
 </table>
+ <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+   <%= f.text_area :comment %>
+   <%= f.submit "送信" %>
+   <% end %>
 
 
 
