--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -13,6 +13,7 @@
     <td><%= user.name %></td>
     <td>フォロー数: <%= user.followings.count %></td>
     <td>フォロワー数: <%= user.followers.count %></td>
+    <td><%= link_to "Show", user %></td>
   </tr>
   <% end %>
 </tbody>
