--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -22,12 +22,12 @@
       </tr>
       <tr>
        <th>follows</th>
-       <th><%= link_to user.followings.count, 'relationships/followings', user_followings_path %>
+       <th><%= link_to user.followings.count, user_followings_path(user.id) %>
        </th>
       </tr>
       <tr>
        <th>followers</th>
-       <th><%= link_to user.followers.count, 'relationships/followers', user_followers_path %></th>
+       <th><%= link_to user.followers.count, user_followers_path(user.id) %></th>
       </tr>
       </tbody>
       </table>
