--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -1,14 +1,13 @@
 <h2>Follow Users</h2>
-<% if @users.exists? %>
-<thead>
-  <tr>
+<table class="table table-hover">
+<tbody>
+<tr><% if @users.exists? %>
     <th>name</th>
     <th></th>
     <th></th>
   </tr>
-</thead>
 <tbody>
-  <% users.each do |user| %>
+  <% @users.each do |user| %>
   <tr>
     <td><%= user.name %></td>
     <td>フォロー数: <%= user.followings.count %></td>
@@ -18,5 +17,7 @@
   <% end %>
 </tbody>
 <% else %>
- <p>ユーザーはいません</p>
+ <th>ユーザーはいません</th>
  <% end %>
+</tbody>
+</table>
