--- a/app/views/relationships/follows.htnl.erb
+++ b/app/views/relationships/follows.htnl.erb
@@ -1,5 +1,7 @@
+<% unless current_user == user %>
 <% if current_user.following?(user) %>
 <%= link_to "フォロー外す",user_relationships_path(user.id), class='btn btn-info' method: :delete %>
 <% else %>
-<%= link_to "フォロー", user_relationships_path(user.id), method: :POST %>
+<%= link_to "フォロー", user_relationships_path(user.id), class= 'btn btn-success'method: :POST %>
+<% end %>
 <% end %>
