--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,9 +19,9 @@
      <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-success text-light" %></td>
      <td><%= link_to 'Destroy', @book, class: "btn btn-danger text-light", method: :delete, data: {confirm: "本当に削除しますか？"} %></td>
    <% end %>
-   <div id="favorites_buttons_<%= @book %>">
+   <td id="favorites_buttons_<%= @book.id %>">
         <%= render partial: 'favorites/favorite-btn', locals: { book: @book} %>
-   </div>
+   </td>
    </td>
    <td>
        コメント件数: <%= @book.book_comments.count %>
