--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -19,7 +19,7 @@
   </td>
   <% if current_user == book_comment_user %>
   <td>
-    <%= link_to 'Destroy', book_book_comment_path(book_comment.book_id, book_comment.id), class: "btn btn-danger", method: :delete %>
+    <%= link_to 'Destroy', book_book_comment_path(book_comment.book_id, book_comment.id), class: "btn btn-danger", method: :delete, remote: true %>
   </td>
   <% end %>
 </tr>
