--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -31,6 +31,7 @@
   </tbody>
 
 </table>
-<div id="comments_buttn_<%= @book.id %>">
+<div id="comments_button_<%= @book.id %>">
 <%= render partial: 'book_comments/comment', locals: { book:@book, user:current_user } %>
 </div>
+<%= render 'book_comments/form', book:@book, book_comment:@book_comment %>
