--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,2 +1,2 @@
-$("#comments_buttn_<%= @book.id %>").html("<%= j(render partial: 'book_comments/comment', locals: {book:@book, user:current_user}) %>");
+$("#comments_button_<%= @book.id %>").html("<%= j(render partial: 'book_comments/comment', locals: {book:@book, user:current_user}) %>");
 $("textarea").val('')
